2008-02-27  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tests/check/libs/rtp.c: (GST_START_TEST):
	Add check for RTP buffer defaults, padding and marker bit API.

2008-02-27  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst-libs/gst/cdda/sha1.c: (sha_transform):
	Use memcpy() instead of upcasting a byte array to long *. This
	fixes an unaligned memory access, resulting in SIGBUS on IA64.
	This should be ported to GCheckSum once we can use GLib 2.16.
	Partially fixes bug #500833.

2008-02-27  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/tag/gsttagdemux.c: (gst_tag_demux_chain):
	  Push tag event after the newsegment event. Log the pointer of
	  the buffer we're actually going to push rather than the buffer
	  we're feeding to _make_metadata_writable().

2008-02-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	Comment smoke typefinder for now. The smokedec plugin needs one
	frame per buffer but we have no parser yet, thus it simply crashes
	in most situations.

2008-02-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/typefind/gsttypefindfunctions.c: (plugin_init):
	Add typefinder for the smoke video codec. Copied from the jpeg plugin.

2008-02-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* gst/typefind/gsttypefindfunctions.c: (mid_type_find),
	(plugin_init):
	Add midi typefinder, copied from the timidity plugin.

2008-02-23  Tim-Philipp Müller  <tim at centricular dot net>

	Based on patch by: Tomasz Sałaciński <tsalacinski gmail com>

	* gst/subparse/gstsubparse.c: (parse_mdvdsub):
	* tests/check/elements/subparse.c: (test_microdvd_with_italics),
	  (subparse_suite):
	  Forward slashes at the beginning and end of a line also signify
	  italics (Fixes: #518162).

2008-02-22  Sebastian Dröge  <slomo@circular-chaos.org>

	* tests/check/gst-plugins-base.supp:
	Add a suppression for a cached value in GIO that wasn't moved
	while moving gio from -bad to -base.
